# CausalPlayground

./: .gitignore  Makefile  README.md  compose.yaml  init_repo.sh  pyproject.toml
api/: main.py
backends/duckdb/: client.py
backends/neo4j/: client.py
compiler/: compile.py  ir.py  parser.py
docs/: design-brief.md  paper-outline.md  semantics.md  workflows.md
plugins/: registry.py
plugins/api/: base.py
plugins/estimators/: dummy_ate.py
runtime/: engine.py  planner.py
scripts/: demo.sh
tests/: test_compile.py  test_parser.py
ui/: README.md
